shared/k8s/config/dashboard/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-k8s-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dev.k8s.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-metrics-scraper
            port:
              number: 443
